form that renders question and compares answer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 
     <div id="myDiv"></div>
 
+    <form id="quizForm">
+      <label for="question">What is the capital of Texas?</label>
+      <input
+        type="text"
+        id="answer"
+        name="answer"
+        placeholder="answer goes here..."
+        required
+      />
+      <button type="submit">Submit</button>
+    </form>
+
+    <div id="result"></div>
+
     <script src="./script.js"></script>
   </body>
 </html>
